force-app/main/default/objects/Payment_Line_Item__c/Payment_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Per-invoice allocation under a Payment header. One row per invoice settled by the payment; carries the invoice metadata (id / doc no / date / amount) and how much of the payment was applied to it.</description>
    <label>Payment Line Item</label>
    <nameField>
        <displayFormat>PLI-{00000}</displayFormat>
        <label>Payment Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>