force-app/main/default/objects/Payment_Line_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Portion of the parent Payment applied to this invoice line. Maps to the SAP payload's "Amount__c".</description>
    <label>Payment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>