force-app/main/default/objects/Payment_Line_Item__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <description>Original invoice amount this line was applied against.</description>
    <label>Invoice Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>