force-app/main/default/objects/Payment_Line_Item__c/fields/Invoice_Document_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Document_No__c</fullName>
    <description>Human-readable invoice number printed on the customer invoice.</description>
    <label>Invoice Document No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>