force-app/main/default/objects/Payment_Line_Item__c/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <description>External invoice identifier (e.g. SAP invoice doc id) the payment line settles. External Id so integrations can upsert allocations against it.</description>
    <externalId>true</externalId>
    <label>Invoice Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>