force-app/main/default/objects/Payment_Line_Item__c/fields/lineItemId__c.field-meta.xml
<CustomField>
    <fullName>lineItemId__c</fullName>
    <description>SAP-side Payment Line Item Id. Unique External Id used as the upsert match key when SAP pushes payment lines.</description>
    <externalId>true</externalId>
    <label>Line Item Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>