force-app/main/default/objects/Payment_Line_Item__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>Portion of the parent Payment applied to this invoice line.</description>
    <label>Payment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>