force-app/main/default/objects/Payment_Line_Item__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>