force-app/main/default/objects/Payment_Line_Item__c/fields/PaymentId__c.field-meta.xml
<CustomField>
    <fullName>PaymentId__c</fullName>
    <description>SAP-side parent payment identifier. The /payment REST endpoint reads this on each line and resolves it to the matching Payment__c record (upserted by Payment__c.PaymentId__c) before stamping the master-detail Payment__c lookup. Not unique — a single SAP payment carries many lines, all with the same PaymentId__c.</description>
    <externalId>true</externalId>
    <label>Payment Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>